--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <!-- Cadenas para el formulario de recuperacion de contrasena -->
     <string name="resetPasswordMessage">Ingresa tu correo electronico para recuperar tu contraseña</string>
     <string name="btnResetPassword">Recuperar contraseña</string>
+
+    <!-- Cadenas de texto para el nav header -->
+    <string name="welcomeLabel">Bienvenido</string>
 </resources>
